deploy/gitlab/gitlab-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-headless
  namespace: devops
spec:
  selector:
    app: gitlab
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
