deploy/gitlab/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-nodeport
  namespace: devops
spec:
  selector:
    app: gitlab
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    name: http
